--- a/decision_service/bindings/python/Makefile
+++ b/decision_service/bindings/python/Makefile
@@ -1,7 +1,7 @@
 # Underscore is required to be consistent with Swig's name generation
 TARGET = _rlinference.so
 
-PIP_FOLDER = ./rlinference/rlinference
+PIP_FOLDER = ./rlinference/
 
 # Python 3.6 is specifically provided, tricky if we want to link against different versions.
 INCLUDE = -I ../../include -I ./ $(shell python3.6-config --includes)
@@ -32,7 +32,7 @@ $(MAIN_SWIG_WRAPPED_INTERFACE): $(MAIN_SWIG_INTERFACE) $(OTHER_SWIG_INTERFACES)
 	swig -c++ -python -o $@ $<
 
 pip: $(MAIN_SWIG_WRAPPED_INTERFACE)
-	cp *_wrap.* $(PIP_FOLDER) & cp $(MODULE_NAME).py $(PIP_FOLDER)
+	cp $(MODULE_NAME).py $(PIP_FOLDER) & python3.6 setup.py bdist_wheel
 
 %.o: %.cc $(HEADERS)
 	$(CXX) $(FLAGS) $(INCLUDE) -c $< -o $@
@@ -52,3 +52,8 @@ clean:
 	-rm -f $(MODULE_NAME)_wrap.h
 	-rm -f $(MODULE_NAME).py
 	-rm -f $(MODULE_NAME).pyc
+	-rm -f $(PIP_FOLDER)/$(MODULE_NAME).py
+	-python3.6 setup.py clean --all
+	-rm -rf *.egg-info
+	-rm -rf dist
+	-rm -rf __pycache__
