--- a/reinforcement_learning/rlclientlib/rlclientlib.vcxproj.filters
+++ b/reinforcement_learning/rlclientlib/rlclientlib.vcxproj.filters
@@ -59,6 +59,7 @@
     <ClInclude Include="..\include\sender.h" />
     <ClInclude Include="..\include\object_factory.h" />
     <ClInclude Include="utility\watchdog.h" />
+    <ClInclude Include="..\include\action_flags.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
